// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`per-demo llms.txt routes hello-world demo source matches snapshot 1`] = `
"## Demo: hello-world

### HelloWorld.svelte
\`\`\`svelte
<script>
  import DemoPage from '../../components/DemoPage.svelte';
  import { loadSources } from '../../components/utils.ts';
  import { files } from './files.ts';

  const sources = await loadSources(files);
</script>

<DemoPage title="Hello World" description="The simplest possible Mochi page — a Svelte component rendered on the server with no client-side JavaScript." {sources}>
  <p>Hello, world!</p>
</DemoPage>
\`\`\`

### routes.ts
\`\`\`ts
import { Mochi } from 'mochi-framework';
import type { MochiRouteValue } from 'mochi-framework';

export const routes: Record<string, MochiRouteValue> = {
  '/demos/hello-world': Mochi.page('./src/demos/hello-world/HelloWorld.svelte'),
};
\`\`\`

### index.ts
\`\`\`ts
import { Mochi, logger } from 'mochi-framework';
import { routes } from './routes';

await Mochi.serve({
  port: 3333,
  development: process.env.MODE === 'development',
  // Named image sizes — referenced by name from <Image pipeline="…">,
  // getImageUrl(src, 'name') and getImage(src, 'name'). The URL only carries the
  // src + pipeline name; the endpoint runs the transform lazily on request.
  image: {
    sizes: {
      hero: { width: 600, height: 400, fit: 'inside' },
      square: { width: 400, height: 400, fit: 'inside' },
      card: { width: 400, height: 267, fit: 'inside' },
      thumb: { width: 240, height: 240, fit: 'inside' },
      'fit-fill': { width: 240, height: 240, fit: 'fill' },
      'fit-inside': { width: 240, height: 240, fit: 'inside' },
      rotate90: { width: 200, height: 200, fit: 'inside', rotate: 90 },
      rotate180: { width: 200, height: 200, fit: 'inside', rotate: 180 },
      rotate270: { width: 200, height: 200, fit: 'inside', rotate: 270 },
      flip: { width: 200, height: 200, fit: 'inside', flip: true },
      flop: { width: 200, height: 200, fit: 'inside', flop: true },
      grayscale: { width: 200, height: 200, fit: 'inside', modulate: { saturation: 0 } },
      brighten: { width: 200, height: 200, fit: 'inside', modulate: { brightness: 1.5 } },
      saturate: { width: 200, height: 200, fit: 'inside', modulate: { saturation: 2 } },
      'fmt-jpeg': { width: 300, height: 300, fit: 'inside', format: 'jpeg', quality: 85 },
      'fmt-png': { width: 300, height: 300, fit: 'inside', format: 'png' },
      'fmt-webp': { width: 300, height: 300, fit: 'inside', format: 'webp', quality: 80 },
    },
  },
  routes,
});

logger.info('Server running at http://localhost:3333');
\`\`\`
"
`;

exports[`per-demo llms.txt routes cookie-vary-test demo source matches snapshot 1`] = `
"## Demo: cookie-vary-test

### CookieVaryTest.svelte
\`\`\`svelte
<script>
  import DemoPage from '../../components/DemoPage.svelte';
  import { loadSources } from '../../components/utils.ts';
  import { files } from './files.ts';

  const sources = await loadSources(files);
</script>

<DemoPage
  title="Cookie Vary Test"
  description="This page sets Vary: Cookie on every response. The page cache sees this header and emits a s-vary-cookie skip — it refuses to cache the response unless the matching rule explicitly opts in via varyOnCookies."
  {sources}
>
  <p>Check the response headers: <code>Vary: Cookie</code> is set by the route handle.</p>
</DemoPage>
\`\`\`

### routes.ts
\`\`\`ts
import { Mochi } from 'mochi-framework';
import type { Handle, MochiRouteValue } from 'mochi-framework';

export const routes: Record<string, MochiRouteValue> = {
  '/cookie-vary-test': Mochi.page('./src/demos/cookie-vary-test/CookieVaryTest.svelte'),
};

export const handle: Handle = async ({ event, resolve }) => {
  const response = await resolve(event);
  if (event.url.pathname === '/cookie-vary-test' || event.url.pathname === '/cookie-vary-test/') {
    response.headers.set('Vary', 'Cookie');
  }
  return response;
};
\`\`\`

### index.ts
\`\`\`ts
import { Mochi, logger } from 'mochi-framework';
import { routes } from './routes';

await Mochi.serve({
  port: 3333,
  development: process.env.MODE === 'development',
  // Named image sizes — referenced by name from <Image pipeline="…">,
  // getImageUrl(src, 'name') and getImage(src, 'name'). The URL only carries the
  // src + pipeline name; the endpoint runs the transform lazily on request.
  image: {
    sizes: {
      hero: { width: 600, height: 400, fit: 'inside' },
      square: { width: 400, height: 400, fit: 'inside' },
      card: { width: 400, height: 267, fit: 'inside' },
      thumb: { width: 240, height: 240, fit: 'inside' },
      'fit-fill': { width: 240, height: 240, fit: 'fill' },
      'fit-inside': { width: 240, height: 240, fit: 'inside' },
      rotate90: { width: 200, height: 200, fit: 'inside', rotate: 90 },
      rotate180: { width: 200, height: 200, fit: 'inside', rotate: 180 },
      rotate270: { width: 200, height: 200, fit: 'inside', rotate: 270 },
      flip: { width: 200, height: 200, fit: 'inside', flip: true },
      flop: { width: 200, height: 200, fit: 'inside', flop: true },
      grayscale: { width: 200, height: 200, fit: 'inside', modulate: { saturation: 0 } },
      brighten: { width: 200, height: 200, fit: 'inside', modulate: { brightness: 1.5 } },
      saturate: { width: 200, height: 200, fit: 'inside', modulate: { saturation: 2 } },
      'fmt-jpeg': { width: 300, height: 300, fit: 'inside', format: 'jpeg', quality: 85 },
      'fmt-png': { width: 300, height: 300, fit: 'inside', format: 'png' },
      'fmt-webp': { width: 300, height: 300, fit: 'inside', format: 'webp', quality: 80 },
    },
  },
  routes,
});

logger.info('Server running at http://localhost:3333');
\`\`\`
"
`;
